872525 - correction mobile

--- a/webagency/A_ID3x/fabsuteau_56258/scss/style.scss
+++ b/webagency/A_ID3x/fabsuteau_56258/scss/style.scss
@@ -134,9 +134,6 @@ padding: 0 3px;
 margin-top:0;
 }
 
-img {
-    max-width: 118%;
-    }
 
 .normal, ul.dropdown-menu {
     font-size: 1.5em;
